--- a/02_Descriptive_Analysis_testing.ipynb
+++ b/02_Descriptive_Analysis_testing.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 66,
    "id": "e375e6b0-116f-44aa-ab4d-fc22c9a02cf0",
    "metadata": {
     "tags": []
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 67,
    "id": "e3c14014-67c6-4f87-b1ae-5b43696cc2b3",
    "metadata": {
     "tags": []
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 68,
    "id": "63fd83a2-5017-4851-8020-52681c8f10d6",
    "metadata": {
     "tags": []
@@ -219,7 +219,7 @@
        "4  [{'WhPerMile': 400, 'kWhRequested': 16.0, 'mil...  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 69,
    "id": "98a1fc96-1637-4020-8037-646685cd8694",
    "metadata": {
     "tags": []
@@ -357,7 +357,7 @@
        "4               8.0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 73,
    "id": "bc3e5e76-81d3-407b-bf1d-0066df4ac096",
    "metadata": {
     "tags": []
@@ -384,7 +384,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 71,
    "id": "50fb76e4-afb3-4549-a4dd-9733aa627873",
    "metadata": {
     "tags": []
@@ -411,7 +411,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 74,
    "id": "ee106a23-603f-4575-9930-f0cb9b24d3f2",
    "metadata": {
     "tags": []
@@ -587,7 +587,7 @@
        "66449                                                NaN  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 75,
    "id": "45da2c05-8de0-4f3f-a354-05a1ec260978",
    "metadata": {
     "tags": []
@@ -725,7 +725,7 @@
        "29243              10.0  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 76,
    "id": "0e478fe1-6450-4c26-8c87-447f0eef849f",
    "metadata": {
     "tags": []
@@ -788,12 +788,12 @@
    "id": "945706c9-a008-43d4-933e-975e1f865bb2",
    "metadata": {},
    "source": [
-    "We can see that this dataset has an unnamed column that represents the entry number. For better readability, we will rename this column"
+    "We can see that this dataset has an unnamed column that represents the entry number. For better readability, we will rename this column."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 77,
    "id": "db7ba4e8-b14b-4bea-a2e1-88ba1c6e9bf9",
    "metadata": {
     "tags": []
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 78,
    "id": "3f04622c-dc5b-476f-8f9e-7af5dff7dab6",
    "metadata": {
     "tags": []
@@ -849,24 +849,26 @@
    "id": "9754667e-7e16-4015-addb-fa6969cfec8a",
    "metadata": {},
    "source": [
-    "From looking at the count of every column, we can see that the \"doneChargingTime\" is missing values. The missing values in the \"userID\" and \"userInputs\" columns are because the user was not registered, so we can ignore them for now."
+    "## Working with missing values\n",
+    "\n",
+    "We are going to follow some steps to work with the missing data. First we will Identify the missing data and then deal with it in order to start working with the dataset.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "845ab78b-94e5-4ce7-b40b-8dc2b2068986",
+   "id": "4a462d5f",
    "metadata": {},
    "source": [
-    "**Detecting missing numerical data**"
+    "**Detecting missing numerical data**\n",
+    "\n",
+    "From looking at the count of every column, we can see that the \"doneChargingTime\" has missing values. The missing values in the \"userID\" and \"userInputs\" columns are because the user was not registered, so we can ignore them for now."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "eb992e37-a6fd-4cb6-9fc7-058df0b97001",
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": 85,
+   "id": "88063607",
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1129,19 +1131,137 @@
        "[66450 rows x 13 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#check if we can spot null-values\n",
-    "cs.isnull()"
+    "#We use the next function to identify missing values:\n",
+    "missing_data = cs.isnull()\n",
+    "missing_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc688a24",
+   "metadata": {},
+   "source": [
+    "The output we receive is a boolean value that indicates whether the value is in fact missing data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65206810",
+   "metadata": {},
+   "source": [
+    "We use next another function which will quicky give us the number of missing values in each column.\n",
+    "True represents a missing value and False represents that there is a value un the dataset."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 86,
+   "id": "6b18760e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number\n",
+      "number\n",
+      "False    66450\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "id\n",
+      "id\n",
+      "False    66450\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "connectionTime\n",
+      "connectionTime\n",
+      "False    66450\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "disconnectTime\n",
+      "disconnectTime\n",
+      "False    66450\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "doneChargingTime\n",
+      "doneChargingTime\n",
+      "False    62362\n",
+      "True      4088\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "kWhDelivered\n",
+      "kWhDelivered\n",
+      "False    66450\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "sessionID\n",
+      "sessionID\n",
+      "False    66450\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "siteID\n",
+      "siteID\n",
+      "False    66450\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "spaceID\n",
+      "spaceID\n",
+      "False    66450\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "stationID\n",
+      "stationID\n",
+      "False    66450\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "timezone\n",
+      "timezone\n",
+      "False    66450\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "userID\n",
+      "userID\n",
+      "False    49187\n",
+      "True     17263\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "userInputs\n",
+      "userInputs\n",
+      "False    49187\n",
+      "True     17263\n",
+      "Name: count, dtype: int64\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for column in missing_data.columns.values.tolist():\n",
+    "    print(column)\n",
+    "    print(missing_data[column].value_counts())\n",
+    "    print(\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59efe298",
+   "metadata": {},
+   "source": [
+    "We can notice that the columns with missing values are: \n",
+    "\n",
+    "- \"doneChargingTime\": 4088 missing data \n",
+    "- \"userID\": 17263 missing data \n",
+    "- \"userInputs\": 17263 missing data "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
    "id": "762436ee-9517-4161-b609-29feeb22fe0b",
    "metadata": {
     "tags": []
@@ -1434,7 +1554,7 @@
        "[46008 rows x 13 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1446,7 +1566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 88,
    "id": "fed85f3c-b0f9-4038-a4b3-4ab2d59ec013",
    "metadata": {
     "tags": []
@@ -1458,7 +1578,7 @@
        "20442"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1478,7 +1598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 89,
    "id": "8206ffbf-d48c-4d9a-b471-c7a7b323d8b5",
    "metadata": {
     "tags": []
@@ -1490,7 +1610,7 @@
        "4088"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1509,7 +1629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 90,
    "id": "e89c14a4-33b9-4e77-a94b-3bc66741f61d",
    "metadata": {
     "tags": []
@@ -1802,7 +1922,7 @@
        "[4088 rows x 13 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1825,7 +1945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 91,
    "id": "61f29e29-99ba-4fc8-b107-eb875b237b89",
    "metadata": {
     "tags": []
@@ -1838,7 +1958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 92,
    "id": "847c9476-8245-4428-8098-73e5a558faeb",
    "metadata": {
     "tags": []
@@ -1876,6 +1996,96 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "1935de02",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number\n",
+      "number\n",
+      "False    62362\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "id\n",
+      "id\n",
+      "False    62362\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "connectionTime\n",
+      "connectionTime\n",
+      "False    62362\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "disconnectTime\n",
+      "disconnectTime\n",
+      "False    62362\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "doneChargingTime\n",
+      "doneChargingTime\n",
+      "False    62362\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "kWhDelivered\n",
+      "kWhDelivered\n",
+      "False    62362\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "sessionID\n",
+      "sessionID\n",
+      "False    62362\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "siteID\n",
+      "siteID\n",
+      "False    62362\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "spaceID\n",
+      "spaceID\n",
+      "False    62362\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "stationID\n",
+      "stationID\n",
+      "False    62362\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "timezone\n",
+      "timezone\n",
+      "False    62362\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "userID\n",
+      "userID\n",
+      "False    46008\n",
+      "True     16354\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "userInputs\n",
+      "userInputs\n",
+      "False    46008\n",
+      "True     16354\n",
+      "Name: count, dtype: int64\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#We can se now that the row \"doneChargingTime\" has not missing data:\n",
+    "\n",
+    "missing_data2 = cs_clean.isnull()\n",
+    "for column in missing_data2.columns.values.tolist():\n",
+    "    print(column)\n",
+    "    print(missing_data2[column].value_counts())\n",
+    "    print(\"\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c96adc52-1cd9-4ec2-9bb4-b9b97347e230",
    "metadata": {},
@@ -1885,7 +2095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 97,
    "id": "d71db97e-4e85-48d0-a0d0-7d8f05c9bb16",
    "metadata": {
     "tags": []
@@ -1898,7 +2108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 98,
    "id": "6986d6a8-8aee-401a-b960-7c140209c71f",
    "metadata": {
     "tags": []
@@ -1937,7 +2147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "7b274488-1012-4f8c-b71c-5ff34125357e",
    "metadata": {
     "tags": []
@@ -2230,7 +2440,7 @@
        "[33004 rows x 13 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2245,7 +2455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "84171c7f-1dd4-480d-b9d8-038167669f9e",
    "metadata": {
     "tags": []
@@ -2538,7 +2748,7 @@
        "[29358 rows x 13 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2551,7 +2761,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 101,
+   "id": "c4ba13f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "siteID\n",
+       "1    33004\n",
+       "2    29358\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cs_test[\"siteID\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
    "id": "86a1b0a8-6210-4519-a651-76562661430f",
    "metadata": {
     "tags": []
@@ -2574,7 +2808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 108,
    "id": "b0983508-c916-4f09-bfa1-d4e5a588228f",
    "metadata": {
     "tags": []
@@ -2586,7 +2820,7 @@
        "(33004, 13)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2594,8 +2828,28 @@
    "source": [
     "# We can now verify that the previous step worked as intended. Note the number of data entries for each set.\n",
     "\n",
-    "cs_test_s1.shape\n",
-    "#cs_test_s2.shape"
+    "cs_test_s1.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "5c2de4c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(29358, 13)"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cs_test_s2.shape"
    ]
   },
   {
@@ -2682,7 +2936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "2c2b7787-eee5-4d8e-9392-68456d1daa74",
    "metadata": {},
    "outputs": [],
@@ -2709,7 +2963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "9191f808-c868-4e05-9e09-39ae80049da0",
    "metadata": {
     "tags": []
@@ -2718,10 +2972,10 @@
     {
      "data": {
       "text/plain": [
-       "datetime.datetime(2024, 1, 6, 8, 37, 9, 456648)"
+       "datetime.datetime(2024, 1, 6, 11, 20, 52, 78941)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2743,7 +2997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "cd5ff1eb-8858-464d-9a06-9089415eb87c",
    "metadata": {
     "tags": []
@@ -2755,7 +3009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "893b1ffb-810a-48b4-8ee1-7701fafeb5e5",
    "metadata": {
     "tags": []
@@ -2768,7 +3022,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[23], line 5\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#For testing purposes, let's try to apply this adjustment for a single data entry first.\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m#Upon running the code, we can notice that the time data is still stored as a String object. \u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m#We can use the datetime.strptime() method to convert String objects to datetime objects.\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m cs_test2\u001b[38;5;241m.\u001b[39mloc[\u001b[38;5;241m0\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mconnectionTime\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m cs_test2\u001b[38;5;241m.\u001b[39mloc[\u001b[38;5;241m0\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mconnectionTime\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m-\u001b[39m timedelta(hours\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m8\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[24], line 5\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# For testing purposes, let's try to apply this adjustment for a single data entry first.\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# Upon running the code, we can notice that the time data is still stored as a String object. \u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# We can use the datetime.strptime() method to convert String objects to datetime objects.\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m cs_test2\u001b[38;5;241m.\u001b[39mloc[\u001b[38;5;241m0\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mconnectionTime\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43mcs_test2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mloc\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mconnectionTime\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mtimedelta\u001b[49m\u001b[43m(\u001b[49m\u001b[43mhours\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m8\u001b[39;49m\u001b[43m)\u001b[49m\n",
       "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'str' and 'datetime.timedelta'"
      ]
     }
@@ -2783,7 +3037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "1370e6be-ba6f-422a-8a7e-d87e7d49b75c",
    "metadata": {
     "tags": []
@@ -2810,7 +3064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": null,
    "id": "049dab0f-b9fd-45fe-89ab-180a89cd9407",
    "metadata": {
     "tags": []
@@ -2847,7 +3101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
