further updates, mainly 2(b)

--- a/02_Descriptive_Analysis_testing_updated.ipynb
+++ b/02_Descriptive_Analysis_testing_updated.ipynb
@@ -6548,7 +6548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 233,
    "id": "e6cc87c9-ad44-42c6-ac5a-782f4d1e28ad",
    "metadata": {
     "tags": []
@@ -6561,16 +6561,16 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[216], line 10\u001b[0m\n\u001b[0;32m      7\u001b[0m cs_test5_station0\u001b[38;5;241m.\u001b[39mloc[\u001b[38;5;241m51\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdowntime\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m cs_test5_station0\u001b[38;5;241m.\u001b[39mloc[\u001b[38;5;241m51\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mconnectionTime\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m-\u001b[39m cs_test5_station0\u001b[38;5;241m.\u001b[39mloc[\u001b[38;5;241m0\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdisconnectTime\u001b[39m\u001b[38;5;124m'\u001b[39m]    \n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(cs_test5_station0)):\n\u001b[1;32m---> 10\u001b[0m     cs_test5_station0\u001b[38;5;241m.\u001b[39mloc[i\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdowntime\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m cs_test5_station0\u001b[38;5;241m.\u001b[39mloc[i\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mconnectionTime\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m-\u001b[39m cs_test5_station0\u001b[38;5;241m.\u001b[39mloc[i,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdisconnectTime\u001b[39m\u001b[38;5;124m'\u001b[39m]  \n\u001b[0;32m     12\u001b[0m cs_test5_station0\u001b[38;5;241m.\u001b[39mhead(\u001b[38;5;241m5\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[233], line 10\u001b[0m\n\u001b[0;32m      7\u001b[0m cs_test5_station0\u001b[38;5;241m.\u001b[39mloc[\u001b[38;5;241m51\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdowntime\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m cs_test5_station0\u001b[38;5;241m.\u001b[39mloc[\u001b[38;5;241m51\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mconnectionTime\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m-\u001b[39m cs_test5_station0\u001b[38;5;241m.\u001b[39mloc[\u001b[38;5;241m0\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdisconnectTime\u001b[39m\u001b[38;5;124m'\u001b[39m]    \n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(cs_test5_station0)):\n\u001b[1;32m---> 10\u001b[0m     cs_test5_station0\u001b[38;5;241m.\u001b[39mloc[i\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdowntime\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m cs_test5_station0\u001b[38;5;241m.\u001b[39mloc[i\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mconnectionTime\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m-\u001b[39m cs_test5_station0\u001b[38;5;241m.\u001b[39mloc[i,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdisconnectTime\u001b[39m\u001b[38;5;124m'\u001b[39m]  \n\u001b[0;32m     12\u001b[0m cs_test5_station0\u001b[38;5;241m.\u001b[39mhead(\u001b[38;5;241m5\u001b[39m)\n",
       "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'float' and 'datetime.datetime'"
      ]
     }
    ],
    "source": [
-    "# attempt to calculate downtime for station 0\n",
+    "# first attempt to calculate downtime for station 0 using new column\n",
     "\n",
-    "downtime = datetime(2024,1,1,12,30,30)\n",
-    "cs_test5_station0['downtime'] = downtime - downtime # initial downtime of 0\n",
+    "downtime = datetime(2024,1,1,12,30,30) # random values since 0 0 0 0 0 0 wont be accepted\n",
+    "cs_test5_station0['downtime'] = downtime - downtime # set initial downtime to 0\n",
     "\n",
     "# this is how we calculate the downtime for 1 row, but when I try to put it in a for-loop, it does not work anymore:    \n",
     "cs_test5_station0.loc[51,'downtime'] = cs_test5_station0.loc[51,'connectionTime'] - cs_test5_station0.loc[0,'disconnectTime']    \n",
@@ -6583,8 +6583,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 244,
    "id": "72018995-9e84-493f-83f1-3cb53c51bda4",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'datetime.timedelta' and 'float'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[244], line 7\u001b[0m\n\u001b[0;32m      4\u001b[0m totaldowntime \u001b[38;5;241m=\u001b[39m totaldowntime \u001b[38;5;241m-\u001b[39m totaldowntime \u001b[38;5;66;03m# set initial downtime to 0\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(cs_test5_station0)):\n\u001b[1;32m----> 7\u001b[0m     totaldowntime \u001b[38;5;241m=\u001b[39m totaldowntime \u001b[38;5;241m+\u001b[39m cs_test5_station0\u001b[38;5;241m.\u001b[39mloc[i\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mconnectionTime\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m-\u001b[39m cs_test5_station0\u001b[38;5;241m.\u001b[39mloc[i,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdisconnectTime\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m      9\u001b[0m totaldowntime\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'datetime.timedelta' and 'float'"
+     ]
+    }
+   ],
+   "source": [
+    "# second attempt to calculate downtime for station 0\n",
+    "\n",
+    "totaldowntime = datetime(2024,1,1,12,30,30) # random values since 0 0 0 0 0 0 wont be accepted\n",
+    "totaldowntime = totaldowntime - totaldowntime # set initial downtime to 0\n",
+    "\n",
+    "for i in range(len(cs_test5_station0)):\n",
+    "    totaldowntime = totaldowntime + cs_test5_station0.loc[i+1,'connectionTime'] - cs_test5_station0.loc[i,'disconnectTime']\n",
+    "    \n",
+    "totaldowntime\n",
+    "\n",
+    "# for some reason, according to the error log, one of the variables is a float - even though\n",
+    "# they are all datetime objects. This only happens in the for-loop.\n",
+    "# In the next cell I tried the same operation, outside a loop, and it works just fine.\n",
+    "# I am guessing it is because of the index not going up in increments of 1, but I am not sure\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 243,
+   "id": "af0dfb5a-390f-4126-be86-d42fb08f0b28",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.timedelta(seconds=1178)"
+      ]
+     },
+     "execution_count": 243,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "totaldowntime = totaldowntime + cs_test5_station0.loc[51,'connectionTime'] - cs_test5_station0.loc[0,'disconnectTime']\n",
+    "totaldowntime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a32a6f76-13ec-42b0-bf35-24494a13346d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9bb2f11d-74ce-4e25-a2b5-d97a4f99ed25",
    "metadata": {},
    "outputs": [],
    "source": []
