--- a/04_Utilization_Prediction.ipynb
+++ b/04_Utilization_Prediction.ipynb
@@ -837,15 +837,14 @@
    "id": "9754667e-7e16-4015-addb-fa6969cfec8a",
    "metadata": {},
    "source": [
-    "From looking at the count of every column, we can see that the \"doneChargingTime\" is missing values. The missing values in the \"userID\" and \"userInputs\" columns are because the user was not registered, so we can ignore them for now."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "845ab78b-94e5-4ce7-b40b-8dc2b2068986",
-   "metadata": {},
-   "source": [
-    "**Detecting missing numerical data**"
+    "## Working with missing values\n",
+    "\n",
+    "<p>We are going to follow some steps to work with the missing data. First we will Identify the missing data and then deal with it in order to start working with the dataset.\n",
+    "\n",
+    "**Detecting missing numerical data**\n",
+    "\n",
+    "From looking at the count of every column, we can see that the \"doneChargingTime\" has missing values. The missing values in the \"userID\" and \"userInputs\" columns are because the user was not registered, so we can ignore them for now.\n",
+    "</p>\n"
    ]
   },
   {
@@ -1123,6 +1122,117 @@
    "source": [
     "#check if we can spot null-values\n",
     "cs.isnull()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74f19a90",
+   "metadata": {},
+   "source": [
+    "<p>The output we receive is a boolean value that indicates whether the value is in fact missing data.\n",
+    "\n",
+    "We use next another function which will quicky give us the number of missing values in each column.\n",
+    "\"True\" represents a missing value and \"False\" represents that there exist a value in the cell.</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0fe7c26",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number\n",
+      "number\n",
+      "False    66450\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "id\n",
+      "id\n",
+      "False    66450\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "connectionTime\n",
+      "connectionTime\n",
+      "False    66450\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "disconnectTime\n",
+      "disconnectTime\n",
+      "False    66450\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "doneChargingTime\n",
+      "doneChargingTime\n",
+      "False    62362\n",
+      "True      4088\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "kWhDelivered\n",
+      "kWhDelivered\n",
+      "False    66450\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "sessionID\n",
+      "sessionID\n",
+      "False    66450\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "siteID\n",
+      "siteID\n",
+      "False    66450\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "spaceID\n",
+      "spaceID\n",
+      "False    66450\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "stationID\n",
+      "stationID\n",
+      "False    66450\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "timezone\n",
+      "timezone\n",
+      "False    66450\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "userID\n",
+      "userID\n",
+      "False    49187\n",
+      "True     17263\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "userInputs\n",
+      "userInputs\n",
+      "False    49187\n",
+      "True     17263\n",
+      "Name: count, dtype: int64\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for column in missing_data.columns.values.tolist():\n",
+    "    print(column)\n",
+    "    print(missing_data[column].value_counts())\n",
+    "    print(\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3768c0f",
+   "metadata": {},
+   "source": [
+    "We can notice that the columns with missing values are: \n",
+    "\n",
+    "- \"doneChargingTime\": 4088 missing data \n",
+    "- \"userID\": 17263 missing data \n",
+    "- \"userInputs\": 17263 missing data "
    ]
   },
   {
@@ -1798,7 +1908,9 @@
    "source": [
     "### Dealing with missing values\n",
     "\n",
-    "When dealing with missing values, we can either **eliminate** them from the dataset or **impute** the null values with estimates. Because the missing data points are timestamps, it's hard them because they simply do not exist. The EV never got done charging, so estimating a value doesn't make any sense. And because our job is to optimize utilization, looking at data points where the EV never fully charged(and thus didn't stay plugged in without charging and taking up charging space) is not adequate. That is why we will drop these data points."
+    "<p>When dealing with missing values, we can either exclude them from the dataset or impute the null values with estimates. However, it's challenging to impute timestamps since they represent the completion of charging, which did not occur in these cases. Estimating a value for these timestamps doesn't make sense because the EV never finished charging.\n",
+    "\n",
+    "Additionally, our goal is to optimize utilization, and including data points where the EV never fully charged (and thus remained plugged in without charging, potentially hindering other EVs) is not appropriate. Therefore, we will exclude these data points.</p>"
    ]
   },
   {
@@ -1847,6 +1959,26 @@
    ],
    "source": [
     "cs_clean.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6997179e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Here we check specifically for missing values in the 'doneChargingTime' column:\n",
+    "missing_values = cs_clean['doneChargingTime'].isnull()\n",
+    "print(missing_values.sum())"
    ]
   },
   {
