--- a/02_Descriptive_Analysis.ipynb
+++ b/02_Descriptive_Analysis.ipynb
@@ -4309,14 +4309,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 420,
+   "cell_type": "markdown",
    "id": "bacfc29a",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Normatization of the column \"kWhDelivered\".\n",
-    "# Here we are going to transform the values of this column so the variable values range from 0 to 1."
+    "Normatization of the column \"kWhDelivered\".\n",
+    "Here we are going to transform the values of this column so the variable values range from 0 to 1."
    ]
   },
   {
@@ -4873,6 +4871,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c57ac1be",
+   "metadata": {},
+   "source": [
+    "The graph shows that the average kWh delivered per hour increases throughout the morning, reaching a peak of 14.5 kWh at around 03:00; another higher at 07:00; and two other more with lower kWh delivered. We can notice that the average kWh delivered then decreases gradually throughout the afternoon and evening, reaching a low of 9.5 kWh at around 23:00."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 436,
    "id": "061da1c6",
@@ -4911,6 +4917,14 @@
     "plt.xlabel(\"Day of the Week\")\n",
     "plt.ylabel(\"Average kWh Delivered\")\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6428c20a",
+   "metadata": {},
+   "source": [
+    "The overall trend in the graph shows that the average kWh delivered per day is higher during the workweek when businesses and households are using more electricity. The average kWh delivered is lower on the weekends when businesses and households are using less electricity."
    ]
   },
   {
@@ -4963,6 +4977,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0c81c991",
+   "metadata": {},
+   "source": [
+    "The overall trend in the graph is similar to the previous graph of the average kWh delivered per day of the week."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 440,
    "id": "69fabbcd",
@@ -4993,6 +5015,14 @@
     "plt.xlabel(\"Day of the Week\")\n",
     "plt.ylabel(\"Average kWh Delivered\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b4e115b",
+   "metadata": {},
+   "source": [
+    "The overall trend in this graph is slightly different because the average kWh delivered is higher in the weekend than in the workdays."
    ]
   },
   {
